# Testing_Exercise

./: .gitignore
01_EX_Calculator/: pyproject.toml
01_EX_Calculator/app/: calculator.py
01_EX_Calculator/test/: test_calculator.py
02_EX_Roman_Numerals/: pyproject.toml
02_EX_Roman_Numerals/app/: romen_numerals.py
02_EX_Roman_Numerals/test/: test_romen_numerals.py
03_EX_Password_field/: pyproject.toml
03_EX_Password_field/app/: Password_field.py
03_EX_Password_field/test/: test_Password_field.py
03_EX_Printer_Cartridges/: pyproject.toml
03_EX_Printer_Cartridges/app/: Printer_Cartridges.py
03_EX_Printer_Cartridges/test/: test_Printer_Cartridges.py
04_EX_E-shop/: pyproject.toml
04_EX_E-shop/app/: E_shop.py
04_EX_E-shop/test/: test_E_shop.py
05_EX_Framing_shop/: pyproject.toml
05_EX_Framing_shop/app/: Framing_shop.py
05_EX_Framing_shop/test/: test_Framing_shop.py
06_EX_Employees/: pyproject.toml
06_EX_Employees/app/: Employees.py
06_EX_Employees/test/: test_Employees.py
07_EX_Drivers_license/: pyproject.toml
07_EX_Drivers_license/app/: Drivers_license.py
07_EX_Drivers_license/test/: test_Drivers_license.py
08_EX_Airline_discount_policy/: pyproject.toml
08_EX_Airline_discount_policy/app/: Airline_discount_policy.py
08_EX_Airline_discount_policy/test/: test_Airline_discount_policy.py
09_EX_Mesure_Converter/: .coverage  README.md  pyproject.toml
09_EX_Mesure_Converter/app/: Mesure_Converter.py
09_EX_Mesure_Converter/test/: test_Mesure_Converter.py
10_EX_Selenium_Webshop/: .gitignore
(+2 files in other folders)
